# ros2_journey_examples

callbacks_and_executors/: CMakeLists.txt  README.md  package.xml
callbacks_and_executors/include/service_test_pkg/: service_client.hpp  service_server.hpp
callbacks_and_executors/launch/: launch_with_deadlock.launch.py  launch_without_deadlock.launch.py  launch_without_deadlock.py
callbacks_and_executors/src/: service_client.cpp  service_client_exe.cpp  service_server.cpp  service_server_exe.cpp
control/: joint_control_with_delay.py
homeworks/chap2/change_logging_level/src/: publisher.cpp
homeworks/chap2/lifecycle_examples/: CMakeLists.txt  README.md  package.xml
homeworks/chap2/lifecycle_examples/include/lifecycle_examples/: managed_node.hpp  manager.hpp
homeworks/chap2/lifecycle_examples/launch/: lifecycle_example.launch.py
homeworks/chap2/lifecycle_examples/src/: managed_node.cpp  manager.cpp
homeworks/chap3/spinning_in_lifecycle_nodes/: SOLUTION.md
homeworks/chap4/: solution_chapter_4
homeworks/chap4/lazy_subscriber/: CMakeLists.txt  README.txt  package.xml
homeworks/chap4/lazy_subscriber/src/: lazy_subscriber.cpp  publisher.cpp  subscriber.cpp
homeworks/chap4/service_with_introspection/: CMakeLists.txt  README.txt  output_example.txt  package.xml
homeworks/chap4/service_with_introspection/src/: client.cpp  server.cpp
homeworks/chap4/test_type_adaptation/: README.md
homeworks/chap4/test_type_adaptation/include/test_type_adaptation/: adapted_subscriber.hpp  type_adapter.hpp
homeworks/chap4/test_type_adaptation/src/: adapted_publisher.cpp
homeworks/chap4/type_adaptation/: Dockerfile  README.md
homeworks/chap4/type_adaptation/src/test_type_adaptation/: CMakeLists.txt  package.xml
homeworks/chap4/type_adaptation/src/test_type_adaptation/include/test_type_adaptation/: adapted_publisher.hpp  adapted_subscriber.hpp  type_adapter.hpp
homeworks/chap4/type_adaptation/src/test_type_adaptation/launch/: test_type_adaptation.launch.py  test_type_adaptation_no_intra_process.launch.py
homeworks/chap4/type_adaptation/src/test_type_adaptation/src/: adapted_publisher.cpp  adapted_subscriber.cpp
homeworks/chap9/change_logging_level/: CMakeLists.txt  README.txt  package.xml
modern_cmake/a_plugin/: CMakeLists.txt
modern_cmake/a_plugin/include/a_plugin/: a_plugin.hpp
modern_cmake/a_simple_project/: CMakeLists.txt
modern_cmake/a_simple_project/src/: a_simple_node.cpp
modern_cmake/an_interface_lib/: CMakeLists.txt
modern_cmake/an_interface_lib/include/an_interface_lib/: an_interface_lib.hpp
modern_cmake/exporting_a_lib/: CMakeLists.txt  package.xml
modern_cmake/using_an_interface_lib/: CMakeLists.txt  package.xml
modern_cmake/using_an_interface_lib/a_plugin/: package.xml  plugins.xml
modern_cmake/using_an_interface_lib/a_plugin/src/: a_plugin.cpp
modern_cmake/using_an_interface_lib/a_simple_project/: package.xml
modern_cmake/using_an_interface_lib/a_simple_project/include/a_simple_project/: a_simple_lib.hpp
modern_cmake/using_an_interface_lib/a_simple_project/src/: a_simple_lib.cpp
modern_cmake/using_an_interface_lib/an_interface_lib/: package.xml
modern_cmake/using_an_interface_lib/an_interface_lib/include/an_interface_lib/: a_plugin_base.hpp
modern_cmake/using_an_interface_lib/exporting_a_lib/include/exporting_a_lib/: a_very_useful_lib.hpp
modern_cmake/using_an_interface_lib/exporting_a_lib/src/: a_very_useful_lib.cpp
modern_cmake/using_an_interface_lib/include/using_an_interface_lib/: another_very_useful_lib.hpp
modern_cmake/using_an_interface_lib/src/: another_very_useful_lib.cpp
modern_cmake/using_an_interface_lib/using_a_plugin/: CMakeLists.txt
modern_cmake/using_an_interface_lib/using_a_plugin/src/: use_obstacle_plugin.cpp
using_a_plugin/: package.xml
