<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>service_test_pkg</name>
  <version>0.0.0</version>
  <description>Package to test ROS executors properties using timers and service calls</description>
  <maintainer email="bassamarco91@gmail.com">Marco Matteo Bassa</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_srvs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>