<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>using_a_plugin</name>
  <version>0.0.1</version>
  <description>Example package demonstrating how to use an Obstacle plugin.</description>
  <maintainer email="bassamarco91@gmail.com">Marco Matteo Bassa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>an_interface_lib</depend>
  <depend>a_plugin</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>