<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>test_type_adaptation</name>
    <version>0.0.0</version>
    <description>Package to test the type adaptation functionality</description>
    <maintainer email="bassamarco91@gmail.com">Marco Matteo Bassa</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>libpcl-common</depend>
    <depend>pcl_conversions</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>